--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,10 @@
         android:theme="@style/Theme.Eunoia"
         tools:targetApi="31">
         <activity
+            android:name=".DashboardActivity"
+            android:exported="false"
+            android:label="@string/title_activity_dashboard" />
+        <activity
             android:name=".MainActivity"
             android:exported="false" />
         <activity
